# Win10hdd

./: SomeText.txt  cmakeInstall.txt  file1.txt  y  y.pub
2DimArr/2dimArray/: 2dimArray.sln
2DimArr/2dimArray/2dimArray/: 2dimArray.cpp  2dimArray.vcxproj  2dimArray.vcxproj.filters
BPCE/: BPCE.cbp  BPCE.cpp  BPCE.h  BPCE.sln  BPCE.vcxproj  BPCE.vcxproj.filters  ComissionEmployee.cpp  ComissionEmployee.h  Source.cpp
BPCE/Debug/: BPCE.exe.recipe  BPCE.ilk  BPCE.vcxproj.FileListAbsolute.txt  vc142.idb
BPCE/Debug/BPCE.tlog/: BPCE.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BPCE/x64/Debug/: BPCE.exe.recipe  BPCE.ilk  BPCE.vcxproj.FileListAbsolute.txt  vc142.idb
Bash/: pingNet.sh
Bash/adv-itLessons/: adv1.sh  adv2.sh  adv3.sh  adv4.sh  file1.txt  file2.txt  file3.txt
Bash/ПРОтехнологииLessons/: script1.sh
C_language/Asceza/: CMakeLists.txt
C_language/Asceza/debugMGW/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
C_language/Asceza/debugUnix/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
C_language/Asceza/makeRun/: make.sh  runD.sh  runR.sh  winMake.sh  winRun.sh
C_language/Asceza/releaseNinja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
C_language/Asceza/src/: CMakeLists.txt  clock.c  config.h  config.h.in  core1.c  core2.c  first.c  timer.c  wClock.c
C_language/Chapter10Structures/: CMakeLists.txt  Dockerfile
C_language/Chapter10Structures/debugMGW/: CMakeCache.txt  Makefile  cmake_install.cmake
C_language/Chapter10Structures/src/: CMakeLists.txt  config.h  ex10_10.c  ex10_13.c  ex10_17.c  ex10_3.c  ex10_6.c  make.sh
C_language/Chapter11Files/: CMakeLists.txt  Dockerfile  wr.sh
C_language/Chapter11Files/src/: CMakeLists.txt  arbRead.c  arbWrite.c  choice.c  config.h  create.c  ex11_10.c  ex11_11.c  ex11_13.c  ex11_3.c  ex11_7trans.c  inquery.c  p502.c  pr11_11.c  read.c  some.c
C_language/Chapter12structures/: CMakeLists.txt  Dockerfile
C_language/Chapter12structures/src/: CMakeLists.txt  clemens152.c  ex12_10  ex12_10.c  ex12_15.c  ex12_17.c  ex12_19depth  ex12_19depth.c  ex12_20.c  ex12_22.c  ex12_23.c  ex12_24.c  ex12_4.c  ex12_6.c  ex12_9  ex12_9.c  ex13_4.c  ex13_8.c  list  list.c  p533.c  p541.c  queue554.c  stack544.c  tree.c  tree.h  vlfunc.c
C_language/Chapter14Questions/: CMakeLists.txt  Dockerfile
C_language/Chapter14Questions/src/: CMakeLists.txt  ex14_3.c  ex14_5.c  ex14_6.c  ex14_7.c  ex14_8  ex14_8.c  ex14_9.c  infile.txt  outfile.txt  p605.c  p606  p606.c  p610.c  p612  p612.c  p614.c  p617.c
C_language/Chapter4/: CMakeLists.txt  makeWin.sh  runD.sh  runR.sh  runWin.sh
C_language/Chapter4/src/: CMakeLists.txt  config.h  ex4_15.c  ex4_16.c  ex4_19.c  ex4_26.c  ex4_27.c  ex4_3.c  ex4_31.c  ex4_32.c  ex4_33.c  ex4_9.c
C_language/Chapter6/: CMakeLists.txt  Dockerfile  make1.sh  makeBuild.sh  math.sh  runBuild.sh  runD.sh  runMath.sh  runR.sh
C_language/Chapter6/src/: CMakeLists.txt  date  date.c  ex6_18.c  ex8_1.c  ex8_15.c  ex8_16.c  ex8_19.c  ex8_34.c  ex8_37.c  ex8_38.c  ex_math.c  p254.c  p383.c
C_language/Chapter9FormattedInputOutput/: CMakeLists.txt  Dockerfile  runD.sh  runR.sh  winMake.sh  winRun.sh
C_language/Chapter9FormattedInputOutput/src/: CMakeLists.txt  ex9_12.c  ex9_4.c  ex9_8.c  p427.c  p465.c  p473.c
C_language/ClemensCinXXI/: CMakeLists.txt  Dockerfile
C_language/ClemensCinXXI/src/: CMakeLists.txt  config.h  p197.c  p216.c  p218.c  p219.c
C_language/VSasceza/: hello.cpp
C_language/chapter2/ch2samples/src/: CMakeLists.txt  ex2_19.c  ex2_20.c  ex2_24.c  ex2_30.c  p55.c  p70.c
C_language/chapter3/: CMakeLists.txt  debWin.sh  make.sh  makeWin.sh  relWin.sh  runD.sh  runR.sh  runWinMGWrelease.sh  win.sh
C_language/chapter3/src/: .vimspector.json  CMakeLists.txt  ex3_17.c  ex3_19.c  ex3_20.c  ex3_21.c  ex3_33.c  ex3_39.c  ex3_40.c  ex3_45.c  ex3_47.c  math.cpp
C_language/chapter5/: CMakeLists.txt  Dockerfile  math.sh  runD.sh  runMath.sh  runR.sh
C_language/chapter5/src/: CMakeLists.txt  config.h  config.h.in  crebs.c  ex5_15.c  ex5_17.c  ex5_23.c  ex5_26.c  ex5_28.c  ex5_29.c  ex5_32.c  ex5_35.c  ex5_37.c  ex5_46.c  multiCrebs.c
CodeBeautyExamples/: gcd  gcd.c
CodeBeautyExamples/MultiThread/: MultiThread.sln
CodeBeautyExamples/MultiThreadVSCode/: mThread.cpp
CodeBeautyExamples/hello/: Makefile  hello.cpp  hello.d
Common/: .nanorc  .tmux.conf  .vimrc  Byobu.txt  dailyReport.ods  dell_7720_info.txt  externalMonitor.txt  file1.txt  serials.txt  temp.txt  temp1.txt
Common/ADV_itK8s/: Dockerfile  index.php
Common/Books/: wsl help.txt
Common/Docs/: dailyReport - Copy.ods  dailyReport - Copy.xls  note.txt.asc  note1.txt  note2.txt  note2.txt.asc  note_utf8.txt.asc
Common/sedAndAwk/: addem.awk  addem1.awk  addemup  arrayAve  average  byState  capitalize1stLetter  checkbook  cow.txt  factorial  file1.txt  file2.txt  horsefeathers.txt  list.txt  list.txt.save  orders  p156.txt  p161  p209sprintf  sedBlockOfText  sedscr  sedsh  simplesed.awk  wordLookUpScript
Common/textEditorConfig/: .tmux.conf  Byobu.txt  devTalk.vimrc
Docker/cppProjects/p1119tree/lib/: CMakeLists.txt  Tree.h  TreeNode.h  config.h  config.h.in
Docker/cppProjects/p1119tree/src/: 1122.cpp  CMakeLists.txt
Factorial/: Factorial.sln
Factorial/Factorial/: Factorial.cpp  Factorial.vcxproj
HTML/: clock.c  ex1.html  ex10.html  ex11.html  ex12.html  ex13.html  ex14.html  ex2.html  ex3.html  ex4.html  ex5.html  ex6.html  ex7.html  ex8.html  ex9.html  hello.c  index.html  style1.css
HTML/bStashuk/: index.html  places.html
HTML/freeCodeCampBootstrap/: alignment.html  button.html  cards.html  display.html  grid.html  gutters.html  horisAlignment.html  images.html  index1.html  indexCDN.html  individualAlignment.html  spacing.html  typography.html
HTML/w3bootstrap/: bsHome.html  dropdown_pills.html  dropdown_tabs.html  navbar.html
Objective_C/S_G_Kochan/: p13.m
(+1168 files in other folders)
